2008-11-10    <piumarta@ubuntu.piumarta.com>

	* plugins/DropPlugin/sqUnixDragDrop.c: Declare prototypes up
	front, and other Cosmetic changes.

2008-11-03  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* src/plugins/OggPlugin: added sqOgg.c, OggPlugin.h
	* src/plugins/GStreamerPlugin: added squeakAudioVideoPipeline
	  SignalInterface.[ch]

2008-05-09  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* config/configure.ac: Version is 3.10-3.

	* platforms/unix/src: Regenerate all with 32-/64-bit clean patches
	from Dave Lewis.

2008-04-29  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* config/configure.ac (CFLAGS): Add --hash-style option to
	configure.

	* vm-display-X11/sqUnixX11.c (xkeysym2ucs4): Translate
	XF86XK_Start to 'ALT-,'.

2008-04-21  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* config/configure.ac: Version is 3.10-2.

	* vm-sound-ALSA/sqUnixSoundALSA.c: Add snd_GetSwitch, snd_SetSwitch,
	snd_SetDevice.

	* vm-display-X11/sqUnixXdnd.c (display_dndOutAcceptedType): Add
	support for display_dndOutSend, display_dndOutAcceptedType.

	* vm-display-X11/sqUnixX11.c (display_parseArgument): Add SUGAR
	support.

	* vm-display-null/sqUnixDisplayNull.c: Add display_dndOutSend,
	display_dndOutAcceptedType.

	* vm-display-fbdev/sqUnixFBDev.c: Add display_dndOutSend,
	display_dndOutAcceptedType.

	vm-display-custom/sqUnixCustomWindow.c (display_dndOutAcceptedType):
	Add display_dndOutSend, display_dndOutAcceptedType.

	* vm/sqUnixMain.c: Add dndOutAcceptedType, dndOutSend.

	* vm/SqSound.h (struct SqSound): Add snd_GetSwitch, snd_SetSwitch,
	snd_SetDevice.

	* vm/SqDisplay.h (struct SqDisplay): add dndOutAcceptedType,
	dndOutSend.

	* plugins/SoundPlugin/sqUnixSound.c: Add mixer support.

	* plugins/DropPlugin/sqUnixDragDrop.c (sqDndOutAcceptedType): Add
	sqDndOutAcceptedType and sqDndOutSend to support drag data request
	from other app.

	* Cross/vm/sq.h: Define DragRequest to support data request from