@@ -1,5 +1,8 @@
 2008-11-10    <piumarta@ubuntu.piumarta.com>
 
+	* plugins/LocalePlugin/sqUnixLocale.c: Fix handling of daylight
+	savings time and offset from UTC.
+
 	* plugins/DropPlugin/sqUnixDragDrop.c: Declare prototypes up
 	front, and other Cosmetic changes.
 
